# incstatspy

./: .gitignore  .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  InitGitSubmodule.txt  README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml  wheels.yml
src/: CMakeLists.txt
src/incstatspy/: CMakeLists.txt  incstatspy.c  incstatspy.h
src/rstatspy/: CMakeLists.txt  rstatspy.c  rstatspy.h
test/: test_incstatspy.py  test_rstatspy.c  test_rstatspy.py
